Freevo Changelog
================

$Id$


Release 1.5.0-rc3 (2004-??-??):
-------------------------------
 * Make it possible to move inside a zoom in image viewer


Release 1.5.0-rc2 (2004-05-11):
-------------------------------
 * Remove a race condition to fix mp3 playback


Release 1.5.0-rc1 (2004-05-07):
-------------------------------
 * Add new animation classes
 * pygoom support (http://freevo.sf.net/pygoom)
 * Support for DVD images as .iso
 * Bugfixes


Release 1.5.0-pre1 (2004-03-21):
--------------------------------
 * Add MimetypePlugin
 * New fxd parser and better fxd item handling
 * Rename most config variables (!)
 * Add "cross fading"-style blending in the image viewer
 * Fxd file support for <playlist> and <slideshow> (see share/fxd/examples)
 * Replaced webradio plugin with a fxd file (share/fxd)
 * New, reworked bluetooth plugin for controlling Freevo
 * detachbar plugin to see what Freevo is playing when detaching the audio player
 * Support for Rendezvous/Zeroconf based service announcement
 * Freevoscreensaver plugin. loop your favorite movie or slideshow to be
   your screensaver. And it only will show when in menus so no annoying
   savers popup while watching movies.
 * Update command plugin to allow for X users to run X based apps (Mozilla etc) 
   via a FXD file.
 * big speed enhancement:
    * better caching of files/attributes
    * including mmpython cache inside Freevo
 * storage of item variables of Freevo sessions
 * VirtualFileSystem to store metadata
 * Skin enhancements
 * Support for DVD Mirrors (full lossless versions of DVDs played from the
   hard drive)
 * Reworked the web interface into XHTML with most design and layout in the
   style sheet. Removed proprietary HTML attributes.
 * Metadata generation during runtime and by cache helper
 * Unicode support
 * Better automounter support for network shares
 * many many other things 
	
	
Release 1.4.0 (2003-11-20):
---------------------------
 * some small bugfixes