@@ -7,6 +7,10 @@ $Id$
 Release 1.5.0-rc3 (2004-??-??):
 -------------------------------
  * Make it possible to move inside a zoom in image viewer
+ * Main loop rewrite
+ * Auto detect movies with more than one file
+ * Chapter support for video files
+ * Bugfixes
 
 
 Release 1.5.0-rc2 (2004-05-11):
